--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CheatDetector - Descubre la Infidelidad en WhatsApp</title>
+    <title>ChatScan - Descubre la Infidelidad en WhatsApp</title>
     <meta name="description" content="Analiza chats de WhatsApp para detectar posibles signos de infidelidad. Herramienta gratuita y confidencial.">
     <link rel="stylesheet" href="styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
@@ -17,7 +17,7 @@
         <nav class="nav">
             <div class="nav-logo">
                 <i class="fas fa-search"></i>
-                <span>CheatDetector</span>
+                <span>ChatScan</span>
             </div>
             <div class="nav-links">
                 <a href="#features">Características</a>
@@ -78,7 +78,7 @@
     <!-- Features Section -->
     <section id="features" class="features">
         <div class="container">
-            <h2 class="section-title">¿Por Qué CheatDetector?</h2>
+            <h2 class="section-title">¿Por Qué ChatScan?</h2>
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">
@@ -237,7 +237,7 @@
                 <div class="footer-brand">
                     <div class="nav-logo">
                         <i class="fas fa-search"></i>
-                        <span>CheatDetector</span>
+                        <span>ChatScan</span>
                     </div>
                     <p>Herramienta de análisis de chats con IA para detectar patrones de comportamiento sospechoso.</p>
                 </div>
@@ -257,7 +257,7 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2024 CheatDetector. Todos los derechos reservados.</p>
+                <p>&copy; 2024 ChatScan. Todos los derechos reservados.</p>
             </div>
         </div>
     </footer>
