refactor: optimize Font Awesome integration for improved performance
- Replace critical inline Font Awesome CSS with optimized external link to reduce render-blocking.
- Remove unused inline styles for Font Awesome icons, streamlining the CSS and enhancing loading speed.
- Maintain only necessary styles for a cleaner and more efficient codebase.

This change aligns with ongoing efforts to enhance mobile performance and meet Meta Ads compliance.

--- a/index.html
+++ b/index.html
@@ -18,6 +18,9 @@
     <link rel="dns-prefetch" href="//fonts.gstatic.com">
     <link rel="dns-prefetch" href="//cdn.tailwindcss.com">
     <link rel="dns-prefetch" href="//cdnjs.cloudflare.com">
+
+    <!-- Font Awesome CSS - carga directa pero optimizada -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
@@ -64,32 +67,6 @@
         }
     </style>
 
-    <!-- Font Awesome crítico - solo íconos usados -->
-    <style>
-        .fas, .fab { font-family: "Font Awesome 6 Free", "Font Awesome 6 Brands"; font-weight: 900; }
-        .fa-heart-broken:before { content: "\f7a9"; }
-        .fa-whatsapp:before { content: "\f232"; }
-        .fa-lock:before { content: "\f023"; }
-        .fa-user-shield:before { content: "\f505"; }
-        .fa-eye-slash:before { content: "\f070"; }
-        .fa-bars:before { content: "\f0c9"; }
-        .fa-search:before { content: "\f002"; }
-        .fa-qrcode:before { content: "\f029"; }
-        .fa-shield-alt:before { content: "\f3ed"; }
-        .fa-desktop:before { content: "\f108"; }
-        .fa-trash-alt:before { content: "\f2ed"; }
-        .fa-mobile-alt:before { content: "\f3cd"; }
-        .fa-handshake:before { content: "\f2b5"; }
-        .fa-microchip:before { content: "\f2db"; }
-        .fa-exclamation:before { content: "\f12a"; }
-        .fa-check:before { content: "\f00c"; }
-        .fa-shield-check:before { content: "\f2f7"; }
-        .fa-clock:before { content: "\f017"; }
-        .fa-comments:before { content: "\f086"; }
-        .fa-chart-bar:before { content: "\f080"; }
-        .fa-exclamation-triangle:before { content: "\f071"; }
-        .fa-zap:before { content: "\26a1"; }
-    </style>
     
     <style>
         /* Ultra minimal critical CSS */
