feat: integrate Meta Pixel for enhanced tracking and analytics
- Added Meta Pixel tracking code to index.html for improved user behavior analysis and ad performance.
- Included noscript fallback for users with JavaScript disabled, ensuring tracking continuity.

This addition supports ongoing efforts to optimize marketing strategies and enhance compliance with Meta Ads requirements.

--- a/index.html
+++ b/index.html
@@ -48,6 +48,24 @@
 
     <!-- Favicon alternativo usando data URI como fallback -->
     <link rel="icon" href="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='32' height='32' viewBox='0 0 32 32'%3E%3Crect width='32' height='32' rx='7' ry='7' fill='%234ade80'/%3E%3Cpath d='M8 12c0-2.2 1.8-4 4-4 1.1 0 2.1.4 2.8 1.1L16 10.2l1.2-1.1C17.9 8.4 18.9 8 20 8c2.2 0 4 1.8 4 4 0 1.5-.9 3.1-2.3 4.3L16 22l-5.7-6.7C9.9 15.1 8 13.5 8 12z' fill='white'/%3E%3Cpath d='M16 8v14M14 11h4M15 14h2M14 17h4' stroke='%234ade80' stroke-width='1.5' stroke-linecap='round'/%3E%3C/svg%3E" type="image/svg+xml">
+
+    <!-- Meta Pixel Code -->
+    <script>
+    !function(f,b,e,v,n,t,s)
+    {if(f.fbq)return;n=f.fbq=function(){n.callMethod?
+    n.callMethod.apply(n,arguments):n.queue.push(arguments)};
+    if(!f._fbq)f._fbq=n;n.push=n;n.loaded=!0;n.version='2.0';
+    n.queue=[];t=b.createElement(e);t.async=!0;
+    t.src=v;s=b.getElementsByTagName(e)[0];
+    s.parentNode.insertBefore(t,s)}(window, document,'script',
+    'https://connect.facebook.net/en_US/fbevents.js');
+    fbq('init', '1201404761815483');
+    fbq('track', 'PageView');
+    </script>
+    <noscript><img height="1" width="1" style="display:none"
+    src="https://www.facebook.com/tr?id=1201404761815483&ev=PageView&noscript=1"
+    /></noscript>
+    <!-- End Meta Pixel Code -->
     
     <!-- Optimización: Script config movido al final del body -->
     
